--- a/packages/styles/package.json
+++ b/packages/styles/package.json
@@ -8,5 +8,8 @@
   },
   "author": "",
   "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "54aa2ecd510b93362da26e28d2c5439a13bbe8f8"
 }
