--- a/packages/components/checkbox/package.json
+++ b/packages/components/checkbox/package.json
@@ -20,5 +20,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "gitHead": "6490543af07c911a214e0058ef7981d9bd36a002"
 }
