--- a/packages/components/button/package.json
+++ b/packages/components/button/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ux-practice/button",
+  "name": "@sunset-ux/button",
   "version": "1.0.9",
   "description": "",
   "main": "dist/index.js",
