--- a/packages/components/checkbox/package.json
+++ b/packages/components/checkbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ux-practice/checkbox",
+  "name": "@sunset-ux/checkbox",
   "version": "1.0.8",
   "description": "",
   "main": "dist/index.js",
