--- a/packages/components/heading/package.json
+++ b/packages/components/heading/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ux-practice/heading",
+  "name": "@sunset-ux/heading",
   "version": "1.0.9",
   "description": "",
   "main": "dist/index.js",
