--- a/packages/components/text/package.json
+++ b/packages/components/text/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ux-practice/text",
+  "name": "@sunset-ux/text",
   "version": "1.0.9",
   "description": "",
   "main": "dist/index.js",
